--- a/_posts/0000-01-02-melw-1234.md
+++ b/_posts/0000-01-02-melw-1234.md
@@ -2,5 +2,7 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+1. First Line
+1. Second Line
+    1. Second indent line
 Use the left arrow to go back!
